Prevent overflow in sidebar nav
Force word wrap even inside word boundaries if otherwise text would
overflow.

This closes #313

--- a/src/main/resources/css/maven-theme.css
+++ b/src/main/resources/css/maven-theme.css
@@ -79,6 +79,7 @@ table.zebra-striped {
 .sidebar-nav {
   padding-left: 0px;
   padding-right: 0px;
+  word-wrap: break-word;
 }
 
 .sidebar-nav .icon-chevron-right, .sidebar-nav .icon-chevron-down {
